# MyProjectCPP_TOP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cat.hpp  human.hpp  math.hpp  my_math.hpp
src/: human.cpp  main.cpp  my_math.cpp
src/utils/: cat.cpp  math.cpp
